[package]
name = "rpi0wcar"
version = "0.1.0"
authors = ["Aaron Qian <aq1018@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = {version = "0.2", features = ["unproven"]}
nb = "1.0"
pwm-pca9685 = "0.3"
num-traits = "0.2"
rppal = {version = "0.11", features = ["hal"]}
anyhow = "1.0"
serde = {version = "1.0", features = ["derive", "alloc"], default-features = false}
serde_json = {version = "1.0", default-features = false, features = ["alloc"] }
gilrs = "0.8"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'