[package]
name = "rpi0wcar"
version = "0.1.0"
authors = ["Aaron Qian <aq1018@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "./LICENSE"
description = "Bluetooth / PS Dualshock 4 controlled RC car with the help of RaspberryPi Zero W."
readme = "./README.md"
repository = "https://github.com/aq1018/rpi0wcar"

[dependencies]
embedded-hal = {version = "0.2", features = ["unproven"]}
nb = "1.0"
pwm-pca9685 = "0.3"
num-traits = "0.2"
rppal = {version = "0.11", features = ["hal"]}
anyhow = "1.0"
serde = {version = "1.0", features = ["derive", "alloc"], default-features = false}
serde_json = {version = "1.0", default-features = false, features = ["alloc"] }
gilrs = "0.8"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.deb]
maintainer-scripts = "maintainer-scripts/"
systemd-units = { enable = true }
extended-description = "Bluetooth / PS Dualshock 4 controlled RC car with the help of RaspberryPi Zero W."